# llmrouter

./: README.md  pyproject.toml
examples/: chat_comparison.py  error_handling.py  streaming_example.py
examples/anthropic/: chat_example.py  completion_example.py  streaming_example.py
examples/ollama/: chat_example.py  completion_example.py  streaming_example.py
examples/openai/: chat_example.py  completion_example.py  streaming_example.py
simplemodelrouter/providers/: openai.py
tests/: test_base.py  test_openai.py
